--- a/index.html
+++ b/index.html
@@ -5,8 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Nazdar</h1>
+    <header>
+        <div id="foto-box">
+            <img id="foto" src="obrazky/foto.jpg" alt="Jana Levá">
+        </div>
+        <h1>JANA LEVÁ</h1>
+    </header>
+    <section id="kontakty">
+            <div><img class="ikona" src="obrazky/telefon.png" alt="ikona telefonu">724 857 181</div>
+            <div><img class="ikona" src="obrazky/email.png" alt="ikona emailu"><a id="email" href="mailto: krat.jana7@gmail.com">krat.jana7@gmail.com</a></div>
+            <div><img class="ikona" src="obrazky/adresa.png" alt="ikona adresy">Býkovice 118, 67971</div>
+            <div><a class="socky" href="https://www.facebook.com/jana.kratochvilova">Facebook</a></div>
+            <div><a class="socky" href="https://www.linkedin.com/in/jana-kratochvilová-57b923159">LinkedIn</a></div>
+    </section>
+
+    <section id="o-mne">
+        <p>Jsem zkušená krizová interventka linky důvěry, která umí naslouchat a pomáhat lidem najít cestu v náročných životních situacích. Kromě práce s lidmi se věnuji i samostudiu web designu a grafiky. Spojení humanitního a technického oboru pro mě představuje výzvu, ale také příležitost rozvíjet se v obou směrech. U každého z nich je pro mě klíčové naslouchat, analyzovat a hledat řešení, která fungují. Do budoucna chci propojit své dovednosti a věnovat se jak psychoterapii, tak tvorbě webů.</p>
+        <p>Ve volném čase se ráda věnuji šití, larpu, zahradničení, cestování a především rodině.</p>
+    </section>
+
+    <section>
+        <table>
+            <tr>
+                <th id="nadpis-soc"><h2>SOCIÁLNÍ PRÁCE<br>
+                    & KRIZOVÁ INTERVENCE</h2></th>
+                <th id="nadpis-web"><h2>WEBDESIGN<br>
+                    & GRAFIKA</h2></th>
+            </tr>
+            <tr>
+                <td class="nadpis-zivotopis" colspan="2"><h3>VZDĚLÁNÍ, VÝCVIKY & KURZY</h3></td>
+            </tr>
+            <tr>
+                <td class="bunka-soc">
+                    <p>Výcvik v telefonické krizové intervenci (Linka bezpečí), 140 hodin, 2019</p>
+                    <p>Bc. Psychologie a Sociální práce (Masarykova univerzita, Fakulta sociálních studií), 2016</p>
+                </td>
+                <td class="bunka-web">
+                    <p>Kurz Staň se kodérkou (Czechitas), 74 hodin, 2025 (probíhá)</p>
+                    <p>Samostatné studium webdesignu a grafiky</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="nadpis-zivotopis" colspan="2"><h3>PRACOVNÍ ZKUŠENOSTI</h3></td>
+            </tr>
+            <tr>
+                <td class="bunka-soc">
+                    <p>Krizová linka Chytrá péče, s.r.o., 2022-2023<br>
+                    -	telefonická krizová intervence se seniory a zdravotně znevýhodněnými</p>
+                    <p>Asociace muskulárních dystrofiků, z.s., 2021-2022<br>
+                    -	sociální poradenství</p>
+                    <p>Linka bezpečí, z.s., 2019-2022<br>
+                    -	telefonická a chatová krizová intervence s dětmi a mládeží<br>
+                    -	lektorství v projektu Linka bezpečí ve vaší třídě</p>
+                    <p>Cesta integrace, o.p.s., 2019-2022<br>
+                    -	ambulantní a terénní sociální práce s dětmi a mládeží v NZDM Klub Cesta</p>
+                </td>
+                <td class="bunka-web">
+                    <p>Časopis Zámkař, Asociace zámkových a klíčových služeb ČR, z.s. (2023-dosud)<br>
+                    -	Sazba, korektura, grafické zpracování<br>
+                    -	http://www.azks.cz/casopis-zamkar-523/</p>
+                    <p>Newsletter AGA, Asociace Grémium Alarm, z.s. (2024-dosud)<br>
+                    -	Sazba, korektura, grafické zpracování</p>
+                    <p>Cesta integrace, o.p.s., 2021<br>
+                    -	Spoluautorství na návrhu a tvorbě webu<br>
+                    -	www.cestaintegrace.cz</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="nadpis-zivotopis" colspan="2"><h3>ZNALOSTI & DOVEDNOSTI</h3></td>
+            </tr>
+            <tr>
+                <td class="bunka-soc" id="dov-soc">
+                    <p>Krizová intervence a komunikace, týmová spolupráce, aktivní naslouchání, řešení konfliktů, etické a empatické jednání</p>
+                    <p>IBM SPSS Statistics, IS PePa, eQuip</p>
+                    <p>Český znakový jazyk (základy)</p>
+                </td>
+                <td class="bunka-web" id="dov-web">
+                    <p>HTML, CSS, JavaScript (základy)</p>
+                    <p>Adobe InDesign, Adobe Photoshop, Adobe Illustrator, Inkscape, CorelDRAW, Canva</p>
+                    <p>Anglický jazyk (C1), francouzský jazyk (A2)</p>
+                </td>
+            </tr>
+        </table>
+
+    </section>
+
+
+
+    <footer>
+        <p>© 2025, Jana Levá</p>
+    </footer>
 </body>
 </html>
