úprava barvy + práce

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div><img class="ikona" src="obrazky/telefon.png" alt="ikona telefonu">724 857 181</div>
             <div><img class="ikona" src="obrazky/email.png" alt="ikona emailu"><a id="email" href="mailto: krat.jana7@gmail.com">krat.jana7@gmail.com</a></div>
             <div><img class="ikona" src="obrazky/adresa.png" alt="ikona adresy">Býkovice 118, 67971</div>
-            <div><a class="socky" href="https://www.facebook.com/jana.kratochvilova">Facebook</a></div>
-            <div><a class="socky" href="https://www.linkedin.com/in/jana-kratochvilová-57b923159">LinkedIn</a></div>
+            <div><a class="socky" href="https://www.facebook.com/jana.kratochvilova" target="_blank">Facebook</a></div>
+            <div><a class="socky" href="https://www.linkedin.com/in/jana-kratochvilová-57b923159" target="_blank">LinkedIn</a></div>
     </section>
 
     <section id="o-mne">
-        <p>Jsem zkušená krizová interventka linky důvěry, která umí naslouchat a pomáhat lidem najít cestu v náročných životních situacích. Kromě práce s lidmi se věnuji i samostudiu web designu a grafiky. Spojení humanitního a technického oboru pro mě představuje výzvu, ale také příležitost rozvíjet se v obou směrech. U každého z nich je pro mě klíčové naslouchat, analyzovat a hledat řešení, která fungují. Do budoucna chci propojit své dovednosti a věnovat se jak psychoterapii, tak tvorbě webů.</p>
+        <p>Jsem zkušená krizová interventka linky důvěry, která umí naslouchat a pomáhat lidem najít cestu v&nbsp;náročných životních situacích. Kromě práce s&nbsp;lidmi se věnuji i samostudiu web designu a grafiky. Spojení humanitního a technického oboru pro mě představuje výzvu, ale také příležitost rozvíjet se v&nbsp;obou směrech. U každého z&nbsp;nich je pro mě klíčové naslouchat, analyzovat a hledat řešení, která fungují. Do budoucna chci propojit své dovednosti a věnovat se jak psychoterapii, tak tvorbě webů.</p>
         <p>Ve volném čase se ráda věnuji šití, larpu, zahradničení, cestování a především rodině.</p>
     </section>
 
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <td class="bunka-soc">
-                    <p>Výcvik v telefonické krizové intervenci (Linka bezpečí), 140 hodin, 2019</p>
+                    <p>Výcvik v&nbsp;telefonické krizové intervenci (Linka bezpečí), 140 hodin, 2019</p>
                     <p>Bc. Psychologie a Sociální práce (Masarykova univerzita, Fakulta sociálních studií), 2016</p>
                 </td>
                 <td class="bunka-web">
@@ -55,25 +55,32 @@
             </tr>
             <tr>
                 <td class="bunka-soc">
-                    <p>Krizová linka Chytrá péče, s.r.o., 2022-2023<br>
-                    -	telefonická krizová intervence se seniory a zdravotně znevýhodněnými</p>
-                    <p>Asociace muskulárních dystrofiků, z.s., 2021-2022<br>
-                    -	sociální poradenství</p>
-                    <p>Linka bezpečí, z.s., 2019-2022<br>
-                    -	telefonická a chatová krizová intervence s dětmi a mládeží<br>
-                    -	lektorství v projektu Linka bezpečí ve vaší třídě</p>
-                    <p>Cesta integrace, o.p.s., 2019-2022<br>
-                    -	ambulantní a terénní sociální práce s dětmi a mládeží v NZDM Klub Cesta</p>
+                    <p>Krizová linka Chytrá péče, s.r.o., 2022-2023</p>
+                    <p class="pozice">Telefonická krizová intervence se seniory a zdravotně znevýhodněnými</p>
+                    <p>Asociace muskulárních dystrofiků, z.s., 2021-2022</p>
+                    <p class="pozice">Sociální poradenství</p>
+                    <p>Linka bezpečí, z.s., 2019-2022</p>
+                    <p class="pozice">Telefonická a chatová krizová intervence s dětmi a mládeží</p>
+                    <p class="pozice">Lektorství v&nbsp;projektu Linka bezpečí ve vaší třídě</p>
+                    <p>Cesta integrace, o.p.s., 2019-2022</p>
+                    <p class="pozice">Ambulantní a terénní sociální práce s dětmi a mládeží v&nbsp;NZDM Klub Cesta</p>
                 </td>
                 <td class="bunka-web">
-                    <p>Časopis Zámkař, Asociace zámkových a klíčových služeb ČR, z.s. (2023-dosud)<br>
-                    -	Sazba, korektura, grafické zpracování<br>
-                    -	http://www.azks.cz/casopis-zamkar-523/</p>
-                    <p>Newsletter AGA, Asociace Grémium Alarm, z.s. (2024-dosud)<br>
-                    -	Sazba, korektura, grafické zpracování</p>
-                    <p>Cesta integrace, o.p.s., 2021<br>
-                    -	Spoluautorství na návrhu a tvorbě webu<br>
-                    -	www.cestaintegrace.cz</p>
+                    <p>Časopis Zámkař, Asociace zámkových a klíčových služeb ČR, z.s. (2023-dosud)</p>
+                    <p class="pozice">Sazba, korektura, grafické zpracování</p>
+                    <p class="pozice">Vydání v&nbsp;PDF:
+                        <a href="http://www.azks.cz/data/clanky/files/000236.pdf" class="odk-ziv" target="_blank">23/1-2</a>
+                        <a href="http://www.azks.cz/data/clanky/files/000240.pdf" class="odk-ziv" target="_blank">23/3-4</a>
+                        <a href="http://www.azks.cz/data/clanky/files/000248.pdf" class="odk-ziv" target="_blank">24/1-2</a>
+                        <a href="http://www.azks.cz/data/clanky/files/000250.pdf" class="odk-ziv" target="_blank">24/3-4</a></p>
+                    <p>Newsletter AGA, Asociace Grémium Alarm, z.s. (2024-dosud)</p>
+                    <p class="pozice">Sazba, korektura, grafické zpracování jednotlivých </p>
+                    <p class="pozice">Vydání v&nbsp;PDF:
+                        <a href="http://www.azks.cz/data/clanky/files/000247.pdf" class="odk-ziv" target="_blank">24/1-2</a>
+                        <a href="http://www.azks.cz/data/clanky/files/000251.pdf" class="odk-ziv" target="_blank">24/3-4</a></p>
+                    <p>Cesta integrace, o.p.s., 2021</p>
+                    <p class="pozice">Spoluautorství na návrhu a tvorbě webu</p>
+                    <p class="pozice">K&nbsp;nahlédnutí: <a href="https://www.cestaintegrace.cz" class="odk-ziv" target="_blank">www.cestaintegrace.cz</a></p>
                 </td>
             </tr>
             <tr>
