Poslední drobné úpravy

--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jana Levá</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div id="foto-box">
-            <img id="foto" src="obrazky/foto.jpg" alt="Jana Levá">
+            <img id="foto" src="obrazky/foto.jpg" alt="Fotografie Jany Levé">
         </div>
-        <h1>JANA LEVÁ</h1>
+        <h1>JANA<br>
+            LEVÁ</h1>
     </header>
+    
     <section id="kontakty">
-            <div><img class="ikona" src="obrazky/telefon.png" alt="ikona telefonu">724 857 181</div>
-            <div><img class="ikona" src="obrazky/email.png" alt="ikona emailu"><a id="email" href="mailto: krat.jana7@gmail.com">krat.jana7@gmail.com</a></div>
-            <div><img class="ikona" src="obrazky/adresa.png" alt="ikona adresy">Býkovice 118, 67971</div>
+            <div><img class="ikona" src="obrazky/telefon.png" alt="Ikona telefonu">724 857 181</div>
+            <div><img class="ikona" src="obrazky/email.png" alt="Ikona emailu"><a id="email" href="mailto: krat.jana7@gmail.com">krat.jana7@gmail.com</a></div>
+            <div><img class="ikona" src="obrazky/adresa.png" alt="Ikona adresy">Býkovice 118, 67971</div>
             <div><a class="socky" href="https://www.facebook.com/jana.kratochvilova" target="_blank">Facebook</a></div>
             <div><a class="socky" href="https://www.linkedin.com/in/jana-kratochvilová-57b923159" target="_blank">LinkedIn</a></div>
     </section>
 
     <section id="o-mne">
-        <p>Jsem zkušená krizová interventka linky důvěry, která umí naslouchat a pomáhat lidem najít cestu v&nbsp;náročných životních situacích. Kromě práce s&nbsp;lidmi se věnuji i samostudiu web designu a grafiky. Spojení humanitního a technického oboru pro mě představuje výzvu, ale také příležitost rozvíjet se v&nbsp;obou směrech. U každého z&nbsp;nich je pro mě klíčové naslouchat, analyzovat a hledat řešení, která fungují. Do budoucna chci propojit své dovednosti a věnovat se jak psychoterapii, tak tvorbě webů.</p>
+        <p>Jsem zkušená <strong id="duraz-soc">krizová interventka</strong> linky důvěry, která umí naslouchat a pomáhat lidem najít cestu v&nbsp;náročných životních situacích. Kromě práce s&nbsp;lidmi se věnuji i samostudiu <strong id="duraz-web">web designu a grafiky</strong>. Spojení humanitního a technického oboru pro mě představuje výzvu, ale také příležitost rozvíjet se v&nbsp;obou směrech. U každého z&nbsp;nich je pro mě klíčové naslouchat, analyzovat a hledat řešení, která fungují. Do budoucna chci propojit své dovednosti a věnovat se jak psychoterapii, tak tvorbě webů.</p>
         <p>Ve volném čase se ráda věnuji šití, larpu, zahradničení, cestování a především rodině.</p>
     </section>
 
@@ -33,58 +36,61 @@
         <table>
             <tr>
                 <th id="nadpis-soc"><h2>SOCIÁLNÍ PRÁCE<br>
-                    & KRIZOVÁ INTERVENCE</h2></th>
+                    &amp; KRIZOVÁ INTERVENCE</h2></th>
                 <th id="nadpis-web"><h2>WEBDESIGN<br>
-                    & GRAFIKA</h2></th>
+                    &amp; GRAFIKA</h2></th>
             </tr>
             <tr>
-                <td class="nadpis-zivotopis" colspan="2"><h3>VZDĚLÁNÍ, VÝCVIKY & KURZY</h3></td>
+                <td colspan="2"><h3>VZDĚLÁNÍ, VÝCVIKY &amp; KURZY</h3></td>
             </tr>
             <tr>
                 <td class="bunka-soc">
-                    <p>Výcvik v&nbsp;telefonické krizové intervenci (Linka bezpečí), 140 hodin, 2019</p>
-                    <p>Bc. Psychologie a Sociální práce (Masarykova univerzita, Fakulta sociálních studií), 2016</p>
+                    <p>Výcvik v&nbsp;telefonické krizové intervenci</p>
+                    <p class="pozice">Linka bezpečí, 140 hodin, 2019</p>
+                    <p>Psychologie a Sociální práce </p>
+                    <p class="pozice">Bakalářský obor, Fakulta sociálních studií, Masarykova univerzita, 2016</p>
                 </td>
                 <td class="bunka-web">
-                    <p>Kurz Staň se kodérkou (Czechitas), 74 hodin, 2025 (probíhá)</p>
+                    <p>Kurz Staň se kodérkou</p>
+                    <p  class="pozice">Czechitas, 74 hodin, 2025 (probíhá)</p>
                     <p>Samostatné studium webdesignu a grafiky</p>
                 </td>
             </tr>
             <tr>
-                <td class="nadpis-zivotopis" colspan="2"><h3>PRACOVNÍ ZKUŠENOSTI</h3></td>
+                <td colspan="2"><h3>PRACOVNÍ ZKUŠENOSTI</h3></td>
             </tr>
             <tr>
                 <td class="bunka-soc">
-                    <p>Krizová linka Chytrá péče, s.r.o., 2022-2023</p>
+                    <p>Krizová linka Chytrá péče, s.r.o. (2022-2023)</p>
                     <p class="pozice">Telefonická krizová intervence se seniory a zdravotně znevýhodněnými</p>
-                    <p>Asociace muskulárních dystrofiků, z.s., 2021-2022</p>
+                    <p>Asociace muskulárních dystrofiků, z.s. (2021-2022)</p>
                     <p class="pozice">Sociální poradenství</p>
-                    <p>Linka bezpečí, z.s., 2019-2022</p>
+                    <p>Linka bezpečí, z.s. (2019-2022)</p>
                     <p class="pozice">Telefonická a chatová krizová intervence s dětmi a mládeží</p>
                     <p class="pozice">Lektorství v&nbsp;projektu Linka bezpečí ve vaší třídě</p>
-                    <p>Cesta integrace, o.p.s., 2019-2022</p>
+                    <p>Cesta integrace, o.p.s. (2019-2022)</p>
                     <p class="pozice">Ambulantní a terénní sociální práce s dětmi a mládeží v&nbsp;NZDM Klub Cesta</p>
                 </td>
                 <td class="bunka-web">
-                    <p>Časopis Zámkař, Asociace zámkových a klíčových služeb ČR, z.s. (2023-dosud)</p>
-                    <p class="pozice">Sazba, korektura, grafické zpracování</p>
-                    <p class="pozice">Vydání v&nbsp;PDF:
+                    <p>Asociace zámkových a klíčových služeb ČR, z.s. (2023-dosud)</p>
+                    <p class="pozice">Sazba, korektura, grafické zpracování časopisu Zámkař</p>
+                    <p class="pozice-odkaz">
                         <a href="http://www.azks.cz/data/clanky/files/000236.pdf" class="odk-ziv" target="_blank">23/1-2</a>
                         <a href="http://www.azks.cz/data/clanky/files/000240.pdf" class="odk-ziv" target="_blank">23/3-4</a>
                         <a href="http://www.azks.cz/data/clanky/files/000248.pdf" class="odk-ziv" target="_blank">24/1-2</a>
                         <a href="http://www.azks.cz/data/clanky/files/000250.pdf" class="odk-ziv" target="_blank">24/3-4</a></p>
-                    <p>Newsletter AGA, Asociace Grémium Alarm, z.s. (2024-dosud)</p>
-                    <p class="pozice">Sazba, korektura, grafické zpracování jednotlivých </p>
-                    <p class="pozice">Vydání v&nbsp;PDF:
+                    <p>Asociace Grémium Alarm, z.s. (2024-dosud)</p>
+                    <p class="pozice">Sazba, korektura, grafické zpracování Newsletteru AGA</p>
+                    <p class="pozice-odkaz">
                         <a href="http://www.azks.cz/data/clanky/files/000247.pdf" class="odk-ziv" target="_blank">24/1-2</a>
                         <a href="http://www.azks.cz/data/clanky/files/000251.pdf" class="odk-ziv" target="_blank">24/3-4</a></p>
-                    <p>Cesta integrace, o.p.s., 2021</p>
+                    <p>Cesta integrace, o.p.s. (2021)</p>
                     <p class="pozice">Spoluautorství na návrhu a tvorbě webu</p>
-                    <p class="pozice">K&nbsp;nahlédnutí: <a href="https://www.cestaintegrace.cz" class="odk-ziv" target="_blank">www.cestaintegrace.cz</a></p>
+                    <p class="pozice-odkaz"><a href="https://www.cestaintegrace.cz" class="odk-ziv" target="_blank">Web</a></p>
                 </td>
             </tr>
             <tr>
-                <td class="nadpis-zivotopis" colspan="2"><h3>ZNALOSTI & DOVEDNOSTI</h3></td>
+                <td colspan="2"><h3>ZNALOSTI &amp; DOVEDNOSTI</h3></td>
             </tr>
             <tr>
                 <td class="bunka-soc" id="dov-soc">
@@ -101,8 +107,6 @@
         </table>
 
     </section>
-
-
 
     <footer>
         <p>© 2025, Jana Levá</p>
